css/custom/custom.scss
a:hover  {
  text-decoration: none;
}

/* For big messages that should take the whole page (e.g. 404, redirect) */
.container.message {
  height: 100vh;
  overflow: hidden;
}

.img-about {
  max-width: 75%;
  height: auto;
}

@media only screen and (max-width: 600px) {
  .section-title {
    text-align: center;
    margin-bottom: 5%;
  }
}

